# abstract-struct

./: Cargo.toml  README.md  lib.rs
examples/: custom-wrap-method-name.rs  no-wrap-method.rs  simple.rs
macro/: Cargo.toml  lib.rs
src/: lib.rs
