cargo-features = ["edition"]

[package]
name    = "abstract-struct-macro"
version = "0.0.0"
edition = "2018"

[dependencies]
matches2    = "1.1"
syn         = {version = "0.14", features = ["full"]}
quote       = "0.6"
proc-macro2 = {version = "^0.4.6", features = ["nightly"]}

[lib]
proc-macro = true
path = "lib.rs"
